First interaction working

--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -35,11 +35,12 @@
         />
 
     <Button
+        android:id="@+id/donateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/donateButton"
-        android:id="@+id/donateButton"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/donateButton"
+        android:onClick="donateButtonPressed"/>
 
 </RelativeLayout>
