Created Menu screen for login and signup options

--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/row_amount"
         android:layout_alignBottom="@+id/row_amount"
+        android:layout_alignParentRight="true"
         android:layout_marginLeft="106dp"
         android:layout_toRightOf="@+id/row_amount"
         android:text="@string/defaultMethod" />
