--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -21,6 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:onClick="signupPressed"
+        android:onClick="signUpPressed"
         android:text="@string/welcomeSignup" />
 </RelativeLayout>
