--- a/app/src/main/res/menu/menu_donate.xml
+++ b/app/src/main/res/menu/menu_donate.xml
@@ -12,4 +12,9 @@
         android:id="@+id/menuReport"
         android:orderInCategory="100"
         android:title="@string/menuReport"/>
+
+    <item
+        android:id="@+id/menuLogout"
+        android:orderInCategory="100"
+        android:title="@string/menuLogout"/>
 </menu>
