--- a/app/src/main/res/menu/menu_report.xml
+++ b/app/src/main/res/menu/menu_report.xml
@@ -7,4 +7,9 @@
         android:id="@+id/menuDonate"
         android:orderInCategory="100"
         android:title="@string/menuDonate"/>
+
+    <item
+        android:id="@+id/menuLogout"
+        android:orderInCategory="100"
+        android:title="@string/menuLogout"/>
 </menu>
